# CONNECT-HUB-Api-Gateway/cmd/docs/swagger.json
@@ -1815,13 +1815,6 @@
                 "summary": "Schedule interview",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "Schedule details",
                         "name": "jobSchedule",
                         "in": "body",
@@ -1871,15 +1864,6 @@
                     "Recruiter Job Management"
                 ],
                 "summary": "Get applied candidates for a job",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Applied candidates retrieved successfully",
@@ -1975,13 +1959,6 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
                         "description": "Application ID",
                         "name": "app_id",
                         "in": "query",
@@ -2035,13 +2012,6 @@
                         "name": "job_id",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -2088,13 +2058,6 @@
                         "description": "ID of the job to update",
                         "name": "job_id",
                         "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     },
                     {
@@ -2201,13 +2164,6 @@
                         "name": "job_id",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -2250,15 +2206,6 @@
                     "Recruiter Job Management"
                 ],
                 "summary": "Get all jobs",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer token",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Successfully retrieved jobs",
